# bingefriend-tvmaze-models

./: README.md  pyproject.toml
.github/workflows/: publish-package.yml
bingefriend_tvmaze_models/models/: episode.py  network.py  season.py  show.py  show_genre.py  webchannel.py
